buildscript {
	repositories {
		maven {
			name = 'Fabric'
			url = 'https://maven.fabricmc.net/'
		}
	}
	dependencies {
		classpath "net.fabricmc:fabric-loom:1.9.2"
	}
}

plugins {
	id 'maven-publish'
}

apply plugin: 'fabric-loom'

version = project.mod_version
group = project.maven_group

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

loom {

	mods {
		"cobblemonmodifier" {
			sourceSet sourceSets.main
		}
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// Test dependencies (from v1.1.0 migration)
	testImplementation "junit:junit:4.13.2"
	testImplementation "org.mockito:mockito-core:5.17.0"
	testImplementation "net.bytebuddy:byte-buddy:1.15.11"
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

// JDK 25+ 需要开放模块给 Mockito 反射
tasks.withType(Test).configureEach {
	jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
	        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
	        '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
	        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
	        '-Dnet.bytebuddy.experimental=true'
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
